Contact overflow-x fix

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1940,7 +1940,7 @@
 	padding: 4vh 0vw;
 	text-align: center;
 	max-width: 100vw;
-	overflow-y: hidden;
+	overflow-x: hidden;
 }
 
 .contact-container {
